<resources>
    <string name="app_name" translatable="false">Free GPS Maps - Navigation and place finder</string>

    <!-- ************************** DataBase Name *************************** -->
    <string name="TxtDataBaseName" translatable="false">GPSDb</string>

    <!--*********************** Data Types *********************  -->
    <string name="TxtCreateTable" translatable="false">create table if not exists" "</string>
    <string name="TxtVARCHAR" translatable="false">" "varchar" "</string>
    <string name="TxtTblPlaces" translatable="false">Places</string>
    <string name="TxtDbAddress" translatable="false">Address</string>
    <string name="TxtDbDate" translatable="false">Date</string>
    <string name="TxtDbTime" translatable="false">Time</string>
    <string name="TxtDbName" translatable="false">Name</string>
    <string name="TxtDbLongitude" translatable="false">Longitude</string>
    <string name="TxtDbLatitude" translatable="false">Latitude</string>

    <string name="small_banner" translatable="false">banner</string>
    <string name="txt_admob" translatable="false">admob</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools" translatable="false">Tools</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="menu_send" translatable="false">Send</string>

    <string name="pdialog_title">Permission Denied</string>
    <string name="pdialog_text">You are currently denied permissions to accessing location of mobile please enable the permission from setting to proceed the application</string>
    <string name="pdialog_setting_btn">Setting</string>
    <string name="do_you_want_to_exit">Do you want to Exit?</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="clear_all">Clear All</string>
    <string name="txt_accounting">Accounting</string>
    <string name="txt_airport">Airport</string>
    <string name="txt_amusement_park">Amusement Park</string>
    <string name="txt_aquarium">Aquarium</string>
    <string name="txt_art_gallery">Art Gallery</string>
    <string name="txt_atm">Atm</string>
    <string name="txt_bakery">Bakery</string>
    <string name="txt_bank">Bank</string>
    <string name="txt_bar">Bar</string>
    <string name="txt_beauty_salon">Beauty Salon</string>
    <string name="txt_bicycle_store">Bicycle Store</string>
    <string name="txt_book_store">Book Store</string>
    <string name="txt_bowling_alley">Bowling Alley</string>
    <string name="txt_bus_stop">Bus Stop</string>
    <string name="txt_cafe">Cafe</string>
    <string name="txt_car_dealer">Car Dealer</string>
    <string name="txt_car_rental">Car Rental</string>
    <string name="txt_car_repair">Car Repair</string>
    <string name="txt_car_wash">Car Wash</string>
    <string name="txt_casino">Casino</string>
    <string name="txt_cemetery">Cemetery</string>
    <string name="txt_church">Church</string>
    <string name="txt_city_hall">City Hall</string>
    <string name="txt_clothing_store">Clothing Store</string>
    <string name="txt_convenience_store">Convenience Store</string>
    <string name="txt_court">Court</string>
    <string name="txt_dentist">Dentist</string>
    <string name="txt_department_store">Department Store</string>
    <string name="txt_doctor">Doctor</string>
    <string name="txt_electrician">Electrician</string>
    <string name="txt_electronics_store">Electronics Store</string>
    <string name="txt_embassy">Embassy</string>
    <string name="txt_establishment">Establishment</string>
    <string name="txt_finance">Finance</string>
    <string name="txt_fire_station">Fire Station</string>
    <string name="txt_florist">Florist</string>
    <string name="txt_food">Food</string>
    <string name="txt_funeral_home">Funeral Home</string>
    <string name="txt_furniture_store">Furniture Store</string>
    <string name="txt_gas_station">Gas Station</string>
    <string name="txt_general_contractor">General Contractor</string>
    <string name="txt_gym">Gym</string>
    <string name="txt_hair_care">Hair Care</string>
    <string name="txt_hardware_store">Hardware Store</string>
    <string name="txt_health">Health</string>
    <string name="txt_temple">Temple</string>
    <string name="txt_home_goods_store">Home Goods Store</string>
    <string name="txt_hospital">Hospital</string>
    <string name="txt_insurance_agency">Insurance Agency</string>
    <string name="txt_jewelry_store">Jewelry Store</string>
    <string name="txt_laundry">Laundry</string>
    <string name="txt_lawyer">Lawyer</string>
    <string name="txt_library">Library</string>
    <string name="txt_liquor_store">Liquor Store</string>
    <string name="txt_local_government_office">Local Government Office</string>
    <string name="txt_locksmith">Locksmith</string>
    <string name="txt_lodging">Lodging</string>
    <string name="txt_meal_delivery">Meal Delivery</string>
    <string name="txt_meal_takeaway">Meal Takeaway</string>
    <string name="txt_mosque">Mosque</string>
    <string name="txt_movie_rental">Movie Rental</string>
    <string name="txt_movie_theater">Movie Theater</string>
    <string name="txt_moving_company">Moving Company</string>
    <string name="txt_museum">Museum</string>
    <string name="txt_night_club">Night Club</string>
    <string name="txt_painter">Painter</string>
    <string name="txt_park">Park</string>
    <string name="txt_parking">Parking</string>
    <string name="txt_pet_store">Pet Store</string>
    <string name="txt_pharmacy">Pharmacy</string>
    <string name="txt_physiotherapist">Physiotherapist</string>
    <string name="txt_place_worship">Place of Worship</string>
    <string name="txt_plumber">Plumber</string>
    <string name="txt_police">Police</string>
    <string name="txt_post_office">Post Office</string>
    <string name="txt_real_estate_agency">Real Estate Agency</string>
    <string name="txt_restaurant">Restaurant</string>
    <string name="txt_roofing_contractor">Roofing Contractor</string>
    <string name="txt_rv_park">RV Park</string>
    <string name="txt_school">School</string>
    <string name="txt_shoe_store">Shoe Store</string>
    <string name="txt_shopping_mall">Shopping Mall</string>
    <string name="txt_spa">Spa</string>
    <string name="txt_stadium">Stadium</string>
    <string name="txt_storage">Storage</string>
    <string name="txt_store">Store</string>
    <string name="txt_subway_station">Subway Station</string>
    <string name="txt_super_market">Super Market</string>
    <string name="txt_synagogue">Synagogue</string>
    <string name="txt_taxi_stand">Taxi Stand</string>
    <string name="txt_train_station">Train Station</string>
    <string name="txt_transit_station">Transit Station</string>
    <string name="txt_travel_agency">Travel Agency</string>
    <string name="txt_university">University</string>
    <string name="txt_veterinary_care">Veterinary Care</string>
    <string name="txt_zoo">Zoo</string>
    <string name="share_it">Share</string>
    <string name="txt_select_language">Select Language</string>
    <string name="txt_language">Language</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="navigation">Navigation</string>
    <string name="nearby_places">Near By Places</string>
    <string name="voice_navigation">Voice Navigation</string>
    <string name="speedometer">Speedometer</string>
    <string name="compass">Compass</string>
    <string name="route_finder">Route Finder</string>
    <string name="source_location">SOURCE LOCATION</string>
    <string name="no_source_location_selected">No Source Location Selected</string>
    <string name="destination_location">DESTINATION LOCATION</string>
    <string name="no_destination_location_selected">No Destination Location Selected</string>
    <string name="find_route">FIND ROUTE</string>
    <string name="location_saved_on">Location Saved on</string>
    <string name="driving_route">Driving Route</string>
    <string name="current_location">Current Location</string>
    <string name="favourite_places">Favourite Places</string>
    <string name="share_location">Share Location</string>
    <string name="start">Start</string>
    <string name="distance">DISTANCE</string>
    <string name="where_to">Where To</string>
    <string name="hospital">Hospital</string>
    <string name="favourite_place">Favourite Places</string>
    <string name="no_service_available" translatable="false">No Service Available</string>
    <string name="_lat_long_not_corrent" translatable="false">Lat Lng not correct</string>
    <string name="address_not_found" translatable="false">Address not found</string>
    <string name="geocoder_not_available" translatable="false">Geo Coder Not Available</string>
    <string name="txt_application_language" translatable="false">Application language</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="save_route" translatable="false">Save Route</string>
</resources>
