<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragments.Navigation_Fragment"
    android:background="@drawable/bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivDrivingRoute"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@drawable/driving_rout_finder" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/driving_route"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivRouteFinder"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@drawable/rout_finder" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/route_finder"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/ivMyLocation"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@drawable/my_location" />

                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/current_location"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll1"
                android:layout_marginTop="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/ivFavouritePlace"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@drawable/fav_places" />
                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/favourite_places"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content" />

                </LinearLayout>


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/ivShareLocation"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@drawable/share_locatin" />

                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/share_location"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/ivRateUs"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@drawable/rate_us" />

                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/rate_us"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll2"
                android:layout_marginTop="30dp"
                android:baselineAligned="false"
                android:orientation="horizontal">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/ivShareApp"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@drawable/share_app" />

                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/share_app"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />
</RelativeLayout>