<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.megafreeapps.free.gps.navigation.speedometer.compass.Activities.FindRouteActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/TvTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/route_finder"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/route_adView"
        android:layout_below="@+id/appBarLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp">

                <RelativeLayout
                    android:id="@+id/lay_start_point"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/ll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary">

                        <ImageView
                            android:id="@+id/iv"
                            android:layout_width="0dp"
                            android:layout_height="60dp"
                            android:layout_weight="1"
                            android:padding="2dp"
                            android:src="@drawable/ic_location_on_black_24dp"
                            android:tint="@android:color/white" />

                        <TextView
                            android:id="@+id/tvSource"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="5"
                            android:text="@string/source_location"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/set_my_location"
                            android:layout_width="0dp"
                            android:layout_height="60dp"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:padding="2dp"
                            android:src="@drawable/ic_location_on_black_24dp"
                            android:visibility="gone" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_below="@+id/ll">

                        <TextView
                            android:id="@+id/tvSourceMessage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/no_source_location_selected"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/start_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_margin="4dp"
                            android:layout_toStartOf="@+id/ivSource"
                            android:layout_toLeftOf="@+id/ivSource"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="Multan"
                            android:textSize="14sp"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/start_latitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_margin="4dp"
                            android:layout_marginTop="15dp"
                            android:layout_toStartOf="@+id/ivSource"
                            android:layout_toLeftOf="@+id/ivSource"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="Lat"

                            android:textSize="14sp"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/start_longitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_margin="4dp"

                            android:text="Lng:71"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/ivSource"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:visibility="gone" />

                    </RelativeLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp">

                <RelativeLayout
                    android:id="@+id/lay_end_point"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:id="@+id/ll2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary">

                        <ImageView
                            android:id="@+id/iv2"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:padding="2dp"
                            android:src="@drawable/ic_location_on_black_24dp"
                            android:tint="@android:color/white" />

                        <TextView
                            android:id="@+id/tvDestination"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_toEndOf="@+id/iv2"
                            android:layout_toRightOf="@+id/iv2"
                            android:text="@string/destination_location"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_below="@+id/ll2">

                        <TextView
                            android:id="@+id/tvDestinationMessage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/no_destination_location_selected"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/end_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_margin="4dp"
                            android:layout_toStartOf="@+id/ivDes"
                            android:layout_toLeftOf="@+id/ivDes"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="Multan"
                            android:textSize="14sp"

                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/end_latitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_margin="4dp"
                            android:layout_marginTop="15dp"
                            android:layout_toStartOf="@+id/ivDes"
                            android:layout_toLeftOf="@+id/ivDes"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="Lat"
                            android:textSize="14sp"

                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/end_longitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_margin="4dp"
                            android:text="Lng:71"

                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/ivDes"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true" />

                    </RelativeLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_start_navigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded"
                android:text="@string/find_route"
                android:textColor="@color/colorPrimaryDark" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv2"
                android:layout_centerInParent="true"
                android:visibility="gone">


                <Button
                    android:id="@+id/btn_save_route"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/rounded"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:paddingEnd="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/save_route"
                    android:textColor="@color/colorPrimaryDark"
                    android:visibility="gone" />

            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/route_adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</RelativeLayout>
